# data-structures-2

./: .gitignore  CMakeLists.txt  README.md  main.c
include/client/: cliente.h
include/core/: core.h  intercalation.h  replacement_selection.h
include/utils/: utils.h
libs/mock/: generate_clients.py
libs/priority_queue/: pqueue.c
libs/queue/: queue.c  queue.h
src/: core.h  intercalation.h  queue.c  replacement_selection.h  utils.h
src/client/: cliente.c
src/core/: intercalation.c  replacement_selection.c
src/utils/: utils.c
test/: cliente.h
